# ros2_custom_interfaces

./: README.md
training/: CMakeLists.txt  package.xml
training/src/: add_client.cpp  add_server.cpp  person_pub_node.cpp  person_sub_node.cpp
training_interfaces/: CMakeLists.txt  ReadME.md  package.xml
training_interfaces/srv/: Value.srv
